# Head

- OFFSET replacement now deals with errors in arguments

# 0.2.14 - 2013 February 4th

- Optimised the array formula expansion a tiny bit
- Aborts earlier if unable to replace a ROW or COLUMN function
- When inlining, don't inline into a COLUMN or ROW function

# 0.2.13 - 2013 February 3rd

- Now fails earlier if external references are found
- Extra logging messages when expanding array formulae

# 0.2.12 - 2013 February 3rd

- Reworked the SimplifyArithmetic routine to make fewer passes.

# 0.2.11 - 2013 February 2nd

- Implemented the FORECAST function
- Implemented the AVERAGEIFS function
- Implemented ExcelToCode.version and display this when running the program or listing errors
- Updated how to add a missing function docs

# 0.2.10 - 2013 February 1st

- Now aborts earlier in the process if the spreadsheet contains functions that haven't yet been implemented in excel_to_code

# 0.2.9 - 2013 January 31st

- implemented the TRANSPOSE function (removed at compile time, only works in array formulae)

# 0.2.8 - 2013 January 31st

- implemented the ISBLANK function in ruby and C

# 0.2.7 - 2013 January 30th

- implemented the EXP function in ruby and C

# 0.2.6 - 2013 January 30th

- implemented the ROW() function (so long as it can be replaced at runtime)
- implemented the COLUMN() function without arguments

# 0.2.5 - 2013 January 13th

- named_references_to_keep and named_references_that_can_be_set_at_runtime can now be passed a block which will be called with each named reference. Returning true will make the named reference kept / settable

# 0.2.4 - 2013 January 13th

- Now checks whether sheet names and named references provided by the user actually exist, and if not, aborts

# 0.2.3 - 2013 January 4th

- Implemented the LOWER function in ruby
- Removed the run_in_memory option, it no longer does anything.
- Remmoved the intermediate_directory option, the code no longer needs to write intermediate files

# 0.2.2 - 2013 December 29th
