@@ -1,6 +1,7 @@
 # Head
 
 - OFFSET replacement now deals with errors in arguments
+- Reworked the way that ranges are dealt with when cells are expected (may not be right)
 
 # 0.2.14 - 2013 February 4th
 
